Start upgrading to java 16